默认哲学10条数据